<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/blinking_indicator"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/blinking_circle_vector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/blinking_indicator_descr" />

        <TextView
            android:id="@+id/stopwatch_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/default_timer"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/blinking_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rsschool.pomodoro.CircularProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            app:custom_color="?attr/colorPrimary"
            app:custom_style="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/stopwatch_timer"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/btn_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restart_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/restart_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/restart_button_descr" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_button_descr" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>